# MemoryKata

./: Cargo.toml  Prompt.md  README.md  todo.txt  vcvarsall.bat - Shortcut.lnk
src/: lib.rs  main.rs  storage.rs  ui.rs
src/games/: crypto_puzzle.rs  greek_alphabet.rs  math_tricks.rs  mod.rs  music_tempo.rs  periodic_table.rs  physics_formulas.rs  pi_challenge.rs
tests/: smoke.rs
