[package]
name = "memorykata"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Your Name <you@example.com>"]
description = "Memory training mini-games with Unicode flair built in Rust using egui."
readme = "README.md"

[dependencies]
eframe = { version = "0.26", features = ["glow"] }
egui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
dirs = "5"
base64 = "0.21"

[dev-dependencies]
assert_cmd = "2"
